k8s/httproute.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpproxy
  namespace: gin-#{Octopus.Environment.Name | toLower}
spec:
  ingressClassName: contour
  routes:
  - conditions:
    - prefix: /
    services:
    - name: hello-k8s
      port: 80
    timeoutPolicy:
      idle: 30m
      response: 30m
  virtualhost:
    fqdn: gin-#{Octopus.Environment.Name | toLower}.gke.beans.sh
    tls:
      secretName: gin-#{Octopus.Environment.Name | toLower}-au-tls
